# Sistema-Inteligente-de-Auditor-a-

./: README.md  nlp_dataset.csv  piloto_nlp_evaluacion.json
chatbot_Ripsy/Proyecto-Hospital/: 05_Entradas_Evidencia  README.md  comparacion_nlp.json  nlp_dataset.csv  nlp_dataset.json  proceso_radicacion_eps.md  pyproject.toml  reporte_nlp.json
chatbot_Ripsy/Proyecto-Hospital/docs/: ia_oportunidades.md  implementacion_ia_paso_a_paso.md
chatbot_Ripsy/Proyecto-Hospital/salidas/: FERO943963_rips.json
chatbot_Ripsy/Proyecto-Hospital/salidas/RIPS/: AC.txt  US.txt
chatbot_Ripsy/Proyecto-Hospital/salidas/RIPS_FERO943963/: AF.txt  AP.txt  AT.txt  US.txt
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO941728/: AC.txt
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO941761/: FERO941761_rips.json  US.txt
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO941906/: AC.txt  AF.txt  FERO941906_rips.json
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO941920/: AC.txt  AF.txt  US.txt
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO942026/: AC.txt  AF.txt
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO942340/: AF.txt  FERO942340_rips.json
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO942345/: AC.txt  AF.txt
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO942347/: FERO942347_rips.json
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO942611/: AC.txt  AF.txt  FERO942611_rips.json
chatbot_Ripsy/Proyecto-Hospital/salidas/lote/FERO942623/: AC.txt  AF.txt  FERO942623_rips.json  US.txt
chatbot_Ripsy/Proyecto-Hospital/src/rips_generator/: invoice_parser.py
(+225 files in other folders)
