[project]
name = "rips-generator"
version = "0.1.0"
description = "Pipeline para generar archivos RIPS a partir de factura electrónica e historia clínica."
requires-python = ">=3.9"
dependencies = [
  "pdfplumber>=0.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
